fix: font awesome dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
 
     <!-- Font Awesome -->
     <script
-      src="https://kit.fontawesome.com/fbadad80a0.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>React App</title>
   </head>
